# phd-progress-tracker

./: .gitignore  CLAUDE.md  LOGIN_CREDENTIALS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b3ac27130a97_initial_user_tables.py
backend/app/: initial_data.py  main.py
backend/app/api/v1/: __init__.py  api.py  auth.py  dashboard.py  notifications.py  phd_plan.py  reports.py  users.py
backend/app/core/: base.py  config.py  database.py  deps.py  exceptions.py  rate_limit.py  security.py
backend/app/models/: __init__.py  attachment.py  comment.py  meeting_note.py  milestone.py  notification_log.py  notification_preference.py  phd_plan.py  phd_plan_approval.py  phd_plan_version.py  planned_paper.py  reminder_schedule.py  report_entry.py  report_period.py  research_project.py  student_profile.py  user.py
backend/app/schemas/: __init__.py  auth.py  notification.py  phd_plan.py  report.py  user.py
backend/app/services/: dashboard_service.py  dashboard_service_simple.py  email_service.py  notification_service.py  phd_plan_service.py  phd_plan_service_async.py  report.py  user.py
backend/app/templates/emails/: base.html  reminder.html  reminder.txt  test.html  test.txt
backend/tests/: conftest.py  test_auth.py
docs/: docker-setup.md  usage.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  (+3 more)
(+31 files in other folders)
